# ez-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py  sse.py
app/core/: __init__.py  graph.py  nodes.py  state.py
app/core/prompts/: critic.txt  planner.txt  writer.txt
app/infra/: __init__.py  cache.py  db.py  logger.py
app/tools/: __init__.py  fetcher.py  llm.py  search.py
frontend/: app.py
scripts/: eval.py  run_cli.py
tests/: conftest.py  test_api.py  test_nodes.py  test_tools.py
