[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-agent"
version = "0.1.0"
description = "AI 研究助手：自动化深度研究 Agent"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # ========= Web 框架 =========
    "fastapi>=0.135.0,<0.136",          # 2026-02 最新稳定版
    "uvicorn[standard]>=0.35.0",
    "sse-starlette>=3.0.0",             # SSE 流式推送

    # ========= Agent 框架 (LangGraph/LangChain 1.0 系列) =========
    "langgraph>=1.0.10,<1.1",           # 2026-02-27 稳定版
    "langchain>=1.2.15,<1.3",
    "langchain-openai>=1.1.0,<1.2",
    "langchain-core>=1.2.20",

    # ========= 数据模型 & 配置 =========
    "pydantic>=2.12.0,<3.0",
    "pydantic-settings>=2.13.0,<3.0",

    # ========= 外部服务 =========
    "tavily-python>=0.7.0",             # 搜索
    "httpx>=0.28.1,<0.29",              # 原作者仍是 0.28.1 最新
    "trafilatura>=2.0.0,<3.0",          # 正文提取，2.0 已改 Apache 2.0

    # ========= 存储 =========
    "sqlalchemy[asyncio]>=2.0.48,<2.1", # 生产留在 2.0 线
    "aiosqlite>=0.21.0",                # 开发用 SQLite
    "redis[hiredis]>=7.4.0",            # Redis + C 加速

    # ========= 工具 =========
    "tenacity>=9.1.0",
    "loguru>=0.7.3",

    # ========= 前端 =========
    "streamlit>=1.55.0,<1.56",          # 避免 1.56 带来的未知风险
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.0",
    "mypy>=1.14.0",
]

# 如果以后要切 PostgreSQL 再装这个
prod = [
    "asyncpg>=0.30.0",
]

# 可选：可观测性
observability = [
    "langfuse>=3.0.0",                  # LangSmith 替代品
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
